# cesil_cpp

./: .gitignore  CMakeLists.txt  CesilStates1.dia  LICENSE  README.md  prog2  prog_text  version.in
include/cesil/: cesil.h  mnemonic.h  util.h  version.h
src/: CMakeLists.txt  cesil.cpp  main.cpp  mnemonic.cpp  util.cpp
